[package]
name = "maskits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-web = "0.3.1"
iota-client = "2.0.1-rc.7"
log = "0.4.17"
tokio = { version = "1.27.0", features = ["macros", "rt"] }
wasm-logger = "0.2.0"
